--- a/cookbooks/acme_win_web/.kitchen.yml
+++ b/cookbooks/acme_win_web/.kitchen.yml
@@ -3,42 +3,48 @@ driver:
   name: hyperv
   vm_switch: DefaultExternalSwitch
   parent_vhd_folder: D:\VirtualMachines
-  parent_vhd_name: packer-virtualbox-iso-1458688988.vhd
-  username: vagrant
-  password: vagrant
+  parent_vhd_name: NanoDSC_2017.03.19.vhd
+  username: administrator
+  password: admin777!
   memory_startup_bytes: 1073741824
 
 transport:
   name: winrm
-  username: vagrant
-  password: vagrant
-  elevated_username: vagrant
-  elevated_password: vagrant
+  username: administrator
+  password: admin777!
+  elevated_username: administrator
+  elevated_password: admin777!
   elevated: true
 
 provisioner:
   name: chef_zero
-  # You may wish to disable always updating cookbooks in CI or other testing environments.
-  # For example:
-  #   always_update_cookbooks: <%= !ENV['CI'] %>
-  # always_update_cookbooks: true
 
 verifier:
   name: pester
-
   
 platforms:
-  - name: 2008r2
+  - name: nano
     os_type: windows
     shell_type: powershell
-    # driver_config:
-    #   user_data: test/support/scripts/userdata.txt
+    provisioner:    
+      install_msi_url: https://s3-us-west-2.amazonaws.com/nano-chef-client/chef-12.14.60.appx
+    transport:
+      elevated: false
+  - name: win2016
+    os_type: windows
+    shell_type: powershell
+    driver:      
+      parent_vhd_folder: D:\VirtualMachines
+      parent_vhd_name: 2016min.vhdx
+  - name: win2008r2
+    os_type: windows
+    shell_type: powershell
+    driver:      
+      parent_vhd_folder: D:\VirtualMachines
+      parent_vhd_name: packer-virtualbox-iso-1458688988.vhd
+      
 
 suites:
   - name: acme_win_web.default
     run_list:
       - recipe[acme_win_web::default]
-    # verifier:
-    #   inspec_tests:
-    #     - test/smoke/default
-    # attributes:
